# Uncertainty-Quant

./: .gitignore  Makefile  README.md  profile.md  pyproject.toml  requirements.txt
02_phase1_diagnostic/: __init__.py
02_phase1_diagnostic/baselines/: __init__.py  deep_ensembles.py  mc_dropout.py  struct_uncertainty_bridge.py
02_phase1_diagnostic/core/: __init__.py  dmt_accelerator.py  hallucination_energy.py  persistence_homology.py
02_phase1_diagnostic/evaluation/: __init__.py  metric_correlation_analysis.py
03_phase2_actionability/: __init__.py
03_phase2_actionability/adaptation/: __init__.py  lora_surgery.py  safe_anchor_loss.py
03_phase2_actionability/pipeline/: __init__.py  tttgf_inference.py
03_phase2_actionability/routing/: __init__.py  topo_sparse_autograd.py
04_experiments/baselines/: struct_uncertainty_requirements.txt
configs/datasets/: drive.yaml
configs/experiments/: exp_01_baseline_uq.yaml  exp_matrix_a.yaml  exp_matrix_b.yaml  exp_matrix_c.yaml
configs/models/: unet2d.yaml  unet2d_matrix_b.yaml  unet2d_matrix_c.yaml
configs/topology/: the_metric.yaml  tttgf.yaml
configs/training/: baseline.yaml  matrix_a.yaml  matrix_b.yaml  matrix_c.yaml
configs/uq/: deep_ensemble.yaml  deterministic.yaml  mc_dropout.yaml  tta.yaml
data/splits/: drive_train.txt  drive_val.txt
docs/: IMPLEMENTATION_STATUS_REPORT.md  NEXT_STEP_PLAN.md
reports/tables/: matrix_c_the.csv  matrix_c_the_fast.csv  matrix_c_the_fast2.csv
scripts/data/: download_drive.py  preprocess.py
scripts/eval/: eval_seg.py  eval_the.py  eval_the_correlation.py  eval_uq.py
(+18 files in other folders)
